--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Share:400,400i,700,700i" rel="stylesheet">
 
-    <title>React App</title>
+    <title>Hacker Hunt Spectator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
